--- a/list.html
+++ b/list.html
@@ -4,77 +4,7 @@
   <meta charset="UTF-8">
   <title>Reorderable List with Icon Picker</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f0f0;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .icon-list {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      align-items: center;
-      margin-top: 20px;
-    }
-
-    .icon-circle {
-      width: 300px;
-      height: 80px;
-      border-radius: 40px;
-      background-color: #e0e0e0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      color: #333;
-      transition: background-color 0.3s ease;
-      cursor: grab;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .icon-circle:hover {
-      background-color: #d0d0d0;
-    }
-
-    .icon-circle i {
-      margin-right: 10px;
-      font-size: 24px;
-    }
-
-    .input-section {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    input[type="text"], select {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      width: 180px;
-    }
-
-    button {
-      padding: 10px 15px;
-      border: none;
-      background-color: #5a67d8;
-      color: white;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background-color: #434190;
-    }
-  </style>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
