--- a/list.html
+++ b/list.html
@@ -1,60 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Reorderable List with Icon Picker</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheet.css">
+	<meta charset="UTF-8" />
+	<title>Reorderable List with Icon Picker</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="stylesheet.css" />
 </head>
 <body>
 
-  <div class="input-section">
-    <input type="text" id="newItemText" placeholder="Enter item text..." />
-    
-    <select id="iconSelect">
-      <option value="fa-bell">🔔 Notification</option>
-      <option value="fa-envelope">✉️ Message</option>
-      <option value="fa-user">👤 Profile</option>
-      <option value="fa-cog">⚙️ Settings</option>
-      <option value="fa-star">⭐ Favorite</option>
-      <option value="fa-heart">❤️ Heart</option>
-    </select>
+	<div class="input-section">
+		<input type="text" id="newItemText" placeholder="Enter item text..." />
+		
+		<select id="iconSelect">
+			<option value="fa-bell">🔔 Notification</option>
+			<option value="fa-envelope">✉️ Message</option>
+			<option value="fa-user">👤 Profile</option>
+			<option value="fa-cog">⚙️ Settings</option>
+			<option value="fa-star">⭐ Favorite</option>
+			<option value="fa-heart">❤️ Heart</option>
+		</select>
 
-    <button onclick="addListItem()">Add Item</button>
-  </div>
+		<div class="color-section">
+			<label for="iconColorPicker">Icon Color:</label>
+			<input type="color" id="iconColorPicker" value="#333333" />
+		</div>
 
-  <div class="icon-list" id="sortableList">
-    <div class="icon-circle"><i class="fas fa-bell"></i> Notifications</div>
-    <div class="icon-circle"><i class="fas fa-envelope"></i> Messages</div>
-    <div class="icon-circle"><i class="fas fa-user"></i> My Profile</div>
-  </div>
+		<button onclick="addListItem()">Add Item</button>
+		<button id="lockBtn">🔓 Unlock</button>
+	</div>
 
-  <!-- ✅ SortableJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
-  <script>
-    // Initialize sortable drag & drop
-    new Sortable(document.getElementById('sortableList'), {
-      animation: 150,
-      ghostClass: 'ghost',
-    });
+	<div class="icon-list" id="sortableList">
+		<div class="icon-circle"><i class="fas fa-bell"></i> Notifications</div>
+		<div class="icon-circle"><i class="fas fa-envelope"></i> Messages</div>
+		<div class="icon-circle"><i class="fas fa-user"></i> My Profile</div>
+	</div>
 
-    // Add new list item
-    function addListItem() {
-      const text = document.getElementById('newItemText').value.trim();
-      const iconClass = document.getElementById('iconSelect').value;
-
-      if (!text) return;
-
-      const newItem = document.createElement('div');
-      newItem.className = 'icon-circle';
-      newItem.innerHTML = `<i class="fas ${iconClass}"></i> ${text}`;
-
-      document.getElementById('sortableList').appendChild(newItem);
-
-      // Clear input
-      document.getElementById('newItemText').value = '';
-    }
-  </script>
-
+	<!-- SortableJS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
